# ivshmem-guest-code

./: .gitignore  README  README.jailhouse  device_spec.txt
ivshmem-server/: ivshmem_server.c
kernel_module/: Makefile  kvm_ivshmem.c
kernel_module/uio/: uio_ivshmem.c
startup_files/: kvmci.ubuntu  nahanni
tests/: shmem_test.py
tests/DumpSum/Host/: dump  dump.c  sum  sum.c  unlink_mem
tests/DumpSum/VM/: dump  dump.c  dump.c.old  readsum  sum  sum.c  unlink_mem  writedump
tests/FTP/Java/: FTP.java  FTPPrep.java  FTPRecv.java  FTPSend.java  Getter.java  Makefile  MemAccess.c  MemAccess.java  ivshmem.c
tests/FTP/Java/org/ualberta/shm/: MemAccess.java  Shm.java  ShmConnection.java  ShmInputStream.java  ShmOutputStream.java  ShmPrep.java  ShmServer.java
tests/FTP/VM/: CMakeLists.txt  ftp.h  ftp_recv.c  ftp_send.c
tests/Ident/: CMakeLists.txt
tests/Interrupts/VM/: CMakeLists.txt  dump_sema.c  ivshmem.c  ivshmem.h  sum_sema  sum_sema.c
tests/Java/: FileInputDemo.java  HexConversions.java
tests/Java/JNI/: .MemAccess.cpp.swp  .MemAccess.java.swp  Makefile  MemAccess.cpp  MemAccess.h  MemAccess.java  MemAccess.off
tests/Spinlocks/Host/: grablock  testlock
tests/Spinlocks/VM/: guestlock  sendioctl  trylock
uio/benchmarks/VM/coyote/: client.c  server.c
uio/tests/DumpSum/: dump.c  sum.c
uio/tests/Interrupts/VM/: CMakeLists.txt  dump_sema.c  getident.c  ivshmem.c  ivshmem.h  sum_sema.c  uio_ioctl.c  uio_read.c  uio_send.c
